<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/continueButton"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="switchToConfirmationActivity"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:layout_marginTop="25dp"
                      android:layout_marginLeft="25dp" android:layout_marginRight="25dp">
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/fullNameLayout">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/full_name" android:id="@+id/fullName"/>
            </android.support.design.widget.TextInputLayout>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:onClick="showDatePickerDialog"
                    android:id="@+id/birthDate" android:hint="@string/birth_date"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/phoneNumberLayout">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number" android:id="@+id/phoneNumber" android:inputType="phone"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/emailLayout">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email" android:id="@+id/email" android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/descriptionLayout">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description" android:id="@+id/description" android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>